--- a/config.json
+++ b/config.json
@@ -1,1 +1,4 @@
-{"name":"brother-study-cli","mirror":"git@github.com:chenzhenjin/typora.git"}
+{
+  "name": "brother-study-cli",
+  "mirror": "git@github.com:chenzhenjin/typora.git"
+}
